--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "php": "^8.1",
         "codeigniter4/framework": "^4.0",
-        "digitickets/lalit": "^3.4"
+        "digitickets/lalit": "^3.4",
+        "ramsey/uuid": "^4.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
