--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require": {
         "php": "^8.1",
         "codeigniter4/framework": "^4.0",
+        "mongodb/mongodb": "^2.1",
         "ramsey/uuid": "^4.8"
     },
     "require-dev": {
