--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require": {
         "php": "^8.1",
         "codeigniter4/framework": "^4.0",
+        "league/commonmark": "^2.4",
         "mongodb/mongodb": "^2.1"
     },
     "require-dev": {
